# automation_scripts

./: README.md
.github/workflows/: alpha-script1.yml
snowflake/: README.md  azure_cost_to_snowflake_public.py  azure_cost_to_snowflake_public.yaml  deploy_semantic_views_public.py  netsuite_config_public.py  netsuite_helpers_public.py  netsuite_to_snowflake_public.py  netsuite_to_snowflake_public.yaml  pyproject.toml  salesforce_config_public.py  salesforce_reports_public.py  salesforce_to_snowflake_public.py  salesforce_to_snowflake_public.yaml  semantic_model_public.yml  snowflake_connection_public.py
