[tool.poetry]
name = "snowflake"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
simple-salesforce = "^1.12"
pandas = "^2.2"
numpy = "^1.26"
cryptography = "^44.0"
python-dotenv = "^1.2.1"
snowflake-connector-python = {version = "^4.3.0", extras = ["pandas"]}
requests = "^2.32"
requests-oauthlib = "^1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
